<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/spaces_key"
        android:summary="@string/spaces_summary"
        android:title="@string/spaces_title"/>

    <EditTextPreference
        android:defaultValue="0"
        android:dialogTitle="@string/digits_dialogTitle"
        android:key="@string/digits_key"
        android:title="@string/digits_title"/>

    <PreferenceScreen
        android:key="@string/write_a_letter_to_the_developer_key"
        android:summary="@string/write_a_letter_to_the_developer_summary"
        android:title="@string/write_a_letter_to_the_developer_title"/>

    <PreferenceScreen
        android:key="@string/version_key"
        android:summary="@string/version_summary"
        android:title="@string/version_title"/>
</PreferenceScreen>