<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/dec_value"
        style="@style/InputFieldTheme"
        android:digits="0123456789-"
        android:hint="@string/dec"
        android:inputType="phone"

        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="normal"
        app:met_floatingLabelAlwaysShown="true"
        app:met_helperText=""
        app:met_primaryColor="@color/colorAccent"
        app:met_textColorHint="@android:color/transparent"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/bin_value"
        style="@style/InputFieldTheme"
        android:digits="01"
        android:hint="@string/bin"
        android:inputType="phone"
        app:met_baseColor="@android:color/black"

        app:met_floatingLabel="normal"
        app:met_floatingLabelAlwaysShown="true"
        app:met_helperText=""
        app:met_primaryColor="@color/colorAccent"
        app:met_textColorHint="@android:color/transparent"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/oct_value"
        style="@style/InputFieldTheme"
        android:digits="01234567-"
        android:hint="@string/oct"
        android:inputType="phone"

        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="normal"
        app:met_floatingLabelAlwaysShown="true"
        app:met_helperText=""
        app:met_primaryColor="@color/colorAccent"
        app:met_textColorHint="@android:color/transparent"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/hex_value"
        style="@style/InputFieldTheme"
        android:digits="0123456789ABCDEFabcdef-"
        android:hint="@string/hex"
        android:inputType="textVisiblePassword"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="normal"
        app:met_floatingLabelAlwaysShown="true"
        app:met_helperText=""
        app:met_primaryColor="@color/colorAccent"
        app:met_textColorHint="@android:color/transparent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/clear_all_button"
            style="@style/ButtonTheme"
            android:layout_weight="1"
            android:text="@string/clear"
            />

        <Button
            android:id="@+id/settings_button"
            style="@style/ButtonTheme"
            android:layout_weight="1"
            android:text="@string/action_settings"
            />


    </LinearLayout>

</LinearLayout>